crates/cribo/tests/snapshots/bundled_code@type_alias_conflict.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/type_alias_conflict/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('first', None, None, False, {'Bound': 'Bound_2', 'alias_is_recursive': 'alias_is_recursive_2', 'alias_type_parameter_is_scoped': 'alias_type_parameter_is_scoped_2', 'alias_bound_is_renamed': 'alias_bound_is_renamed_2'})
_cribo_finder_local.register('second', None, None, False, {'Bound': 'Bound_1', 'alias_is_recursive': 'alias_is_recursive_1', 'alias_type_parameter_is_scoped': 'alias_type_parameter_is_scoped_1', 'alias_bound_is_renamed': 'alias_bound_is_renamed_1'})
first = _cribo.types.SimpleNamespace(__name__='first')
type SharedAlias_2 = list[SharedAlias_2]
T_2 = int
type ShadowedAlias_2[T] = list[T]
class Bound_2:
    pass
Bound_2.__module__ = 'first'
Bound_2.__name__ = 'Bound'
Bound_2.__qualname__ = 'Bound'
type BoundedAlias_2[T: Bound_2] = T
def alias_is_recursive_2():
    return SharedAlias_2.__value__.__args__[0] is SharedAlias_2
alias_is_recursive_2.__module__ = 'first'
alias_is_recursive_2.__name__ = 'alias_is_recursive'
alias_is_recursive_2.__qualname__ = 'alias_is_recursive'
def alias_type_parameter_is_scoped_2():
    parameter = ShadowedAlias_2.__type_params__[0]
    return ShadowedAlias_2.__value__.__args__[0] is parameter and T_2 is int
alias_type_parameter_is_scoped_2.__module__ = 'first'
alias_type_parameter_is_scoped_2.__name__ = 'alias_type_parameter_is_scoped'
alias_type_parameter_is_scoped_2.__qualname__ = 'alias_type_parameter_is_scoped'
def alias_bound_is_renamed_2():
    return BoundedAlias_2.__type_params__[0].__bound__ is Bound_2
alias_bound_is_renamed_2.__module__ = 'first'
alias_bound_is_renamed_2.__name__ = 'alias_bound_is_renamed'
alias_bound_is_renamed_2.__qualname__ = 'alias_bound_is_renamed'
first.Bound = Bound_2
first.T = T_2
first.alias_bound_is_renamed = alias_bound_is_renamed_2
first.alias_is_recursive = alias_is_recursive_2
first.alias_type_parameter_is_scoped = alias_type_parameter_is_scoped_2
second = _cribo.types.SimpleNamespace(__name__='second')
type SharedAlias_1 = list[SharedAlias_1]
T_1 = str
type ShadowedAlias_1[T] = list[T]
class Bound_1:
    pass
Bound_1.__module__ = 'second'
Bound_1.__name__ = 'Bound'
Bound_1.__qualname__ = 'Bound'
type BoundedAlias_1[T: Bound_1] = T
def alias_is_recursive_1():
    return SharedAlias_1.__value__.__args__[0] is SharedAlias_1
alias_is_recursive_1.__module__ = 'second'
alias_is_recursive_1.__name__ = 'alias_is_recursive'
alias_is_recursive_1.__qualname__ = 'alias_is_recursive'
def alias_type_parameter_is_scoped_1():
    parameter = ShadowedAlias_1.__type_params__[0]
    return ShadowedAlias_1.__value__.__args__[0] is parameter and T_1 is str
alias_type_parameter_is_scoped_1.__module__ = 'second'
alias_type_parameter_is_scoped_1.__name__ = 'alias_type_parameter_is_scoped'
alias_type_parameter_is_scoped_1.__qualname__ = 'alias_type_parameter_is_scoped'
def alias_bound_is_renamed_1():
    return BoundedAlias_1.__type_params__[0].__bound__ is Bound_1
alias_bound_is_renamed_1.__module__ = 'second'
alias_bound_is_renamed_1.__name__ = 'alias_bound_is_renamed'
alias_bound_is_renamed_1.__qualname__ = 'alias_bound_is_renamed'
second.Bound = Bound_1
second.T = T_1
second.alias_bound_is_renamed = alias_bound_is_renamed_1
second.alias_is_recursive = alias_is_recursive_1
second.alias_type_parameter_is_scoped = alias_type_parameter_is_scoped_1
first_alias_bound = first.alias_bound_is_renamed
first_alias_scope = first.alias_type_parameter_is_scoped
first_alias_is_recursive = first.alias_is_recursive
second_alias_bound = second.alias_bound_is_renamed
second_alias_scope = second.alias_type_parameter_is_scoped
second_alias_is_recursive = second.alias_is_recursive
print(first_alias_is_recursive())
print(second_alias_is_recursive())
print(first_alias_scope())
print(second_alias_scope())
print(first_alias_bound())
print(second_alias_bound())
