crates/cribo/tests/snapshots/bundled_code@type_checking_imports.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/type_checking_imports/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        if getattr(module, '_cribo_machinery_loaded', False):
            module.__initialized__ = False
            module.__initializing__ = False
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('module_b', None, None, False, {'TypeB': 'TypeB'})
module_a = _cribo.types.SimpleNamespace(__name__='module_a', __doc__='Module A with a simple function.')
"""Module A with a simple function."""
def function_a(value):
    """Process a value."""
    return f"Processed: {value}"
module_a.function_a = function_a
module_b = _cribo.types.SimpleNamespace(__name__='module_b', __doc__='Module B with a type definition.')
"""Module B with a type definition."""
class TypeB:
    """A type that's only used for type hints."""

    def __init__(self, value: str):
        self.value = value

    def __str__(self):
        return self.value
TypeB.__module__ = 'module_b'
"""Test case for TYPE_CHECKING blocks that only contain imports."""
typing = _cribo.typing
if _cribo.typing.TYPE_CHECKING:
    pass
def use_function(x: "TypeB") -> str:
    """Use the function from module_a with type hint from module_b."""
    return function_a(x)
if __name__ == "__main__":
    print(use_function("test"))
