crates/cribo/tests/snapshots/bundled_code@version_import_complex.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/version_import_complex/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('mypackage.utils', '_cribo_init___cribo_254d99_mypackage_utils', 'mypackage_utils', False)
_cribo_finder.register('mypackage', '_cribo_init___cribo_623f97_mypackage', 'mypackage', True)
mypackage___version__ = _cribo.types.SimpleNamespace(__name__='mypackage.__version__', __doc__='Version information.')
mypackage = _cribo.types.SimpleNamespace(__name__='mypackage', __initializing__=False, __initialized__=False, __path__=[])
mypackage.__version__ = mypackage___version__
"""Version information."""
__version__ = "2.0.0"
__author__ = "Test Author"
mypackage___version__.__version__ = __version__
mypackage___version__.__author__ = __author__
mypackage_utils = _cribo.types.SimpleNamespace(__name__='mypackage.utils', __initializing__=False, __initialized__=False)
_cribo_finder.bind('mypackage.utils', mypackage_utils)
mypackage.utils = mypackage_utils
def _cribo_init___cribo_623f97_mypackage(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage'
    self.__doc__ = 'Main package that exposes version and imports submodules.'
    global mypackage_utils
    """Main package that exposes version and imports submodules."""
    __version__ = mypackage___version__.__version__
    mypackage.__version__ = __version__
    __author__ = mypackage___version__.__author__
    mypackage.__author__ = __author__
    mypackage_utils = _cribo_init___cribo_254d99_mypackage_utils(mypackage_utils)
    utils = mypackage.utils
    self.utils = utils
    self.__version__ = __version__
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage.__init__ = _cribo_init___cribo_623f97_mypackage
def _cribo_init___cribo_254d99_mypackage_utils(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'mypackage'
    self.__doc__ = 'Utility module that imports __version__ from a sibling module.'
    """Utility module that imports __version__ from a sibling module."""
    __version__ = mypackage___version__.__version__
    mypackage_utils.__version__ = __version__

    def get_user_agent():
        """Return a user agent string with version."""
        return f"mypackage/{__version__}"
    get_user_agent.__module__ = 'mypackage.utils'
    get_user_agent.__qualname__ = 'get_user_agent'
    self.get_user_agent = get_user_agent
    self.__initialized__ = True
    self.__initializing__ = False
    return self
mypackage_utils.__init__ = _cribo_init___cribo_254d99_mypackage_utils
"""Test fixture for importing __version__ in a complex module structure."""
__cribo_init_result = _cribo_init___cribo_623f97_mypackage(mypackage)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage, attr, getattr(__cribo_init_result, attr))
__cribo_init_result = _cribo_init___cribo_623f97_mypackage(mypackage)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(mypackage, attr, getattr(__cribo_init_result, attr))
mypackage_utils = _cribo_init___cribo_254d99_mypackage_utils(mypackage_utils)
get_user_agent = mypackage.utils.get_user_agent
print(f"User agent: {get_user_agent()}")
print(f"Package version: {mypackage.__version__}")
utils = mypackage.utils
