crates/cribo/tests/snapshots/bundled_code@wildcard_all_setattr.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/wildcard_all_setattr/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None):
        self._entry = entry
        self._namespace = namespace

    def create_module(self, spec):
        if self._namespace is not None:
            return self._namespace
        if self._entry[1] is not None:
            return globals()[self._entry[1]]
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        if getattr(module, '_cribo_machinery_loaded', False):
            saved = pristine.get(key)
            if saved is not None:
                module.__dict__.clear()
                module.__dict__.update(saved)
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            module.__dict__.clear()
            module.__dict__.update(state)
            module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name)), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder.register('package', '_cribo_init___cribo_cca96f_package', 'package', True)
_cribo_finder.register('package._subpackage', '_cribo_init___cribo_66c36f_package__subpackage', 'package__subpackage', True)
_cribo_finder.register('package._subpackage.module_a', None, None, False, {'MyClass': 'MyClass'})
_cribo_finder.register('package._subpackage.module_b', None, None, False, {'my_function': 'my_function'})
package__subpackage_module_a = _cribo.types.SimpleNamespace(__name__='package._subpackage.module_a', __doc__='Module A with MyClass.')
package = _cribo.types.SimpleNamespace(__name__='package', __initializing__=False, __initialized__=False, __path__=[])
package__subpackage = _cribo.types.SimpleNamespace(__name__='package._subpackage', __initializing__=False, __initialized__=False, __path__=[])
package._subpackage = package__subpackage
package__subpackage.module_a = package__subpackage_module_a
"""Module A with MyClass."""
class MyClass:
    """A class exported through wildcards."""

    def __init__(self):
        self.value = "from module_a"
MyClass.__module__ = 'package._subpackage.module_a'
package__subpackage_module_a.MyClass = MyClass
package__subpackage_module_b = _cribo.types.SimpleNamespace(__name__='package._subpackage.module_b', __doc__='Module B with my_function.')
package__subpackage.module_b = package__subpackage_module_b
"""Module B with my_function."""
def my_function():
    """A function exported through wildcards."""
    return "from module_b"
my_function.__module__ = 'package._subpackage.module_b'
package__subpackage_module_b.my_function = my_function
def _cribo_init___cribo_cca96f_package(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'package'
    self.__doc__ = 'Package using wildcard imports and setattr pattern like httpx.'
    """Package using wildcard imports and setattr pattern like httpx."""
    __cribo_init_result = _cribo_init___cribo_66c36f_package__subpackage(package__subpackage)
    for attr in dir(__cribo_init_result):
        if not attr.startswith('_'):
            setattr(package._subpackage, attr, getattr(__cribo_init_result, attr))
    MyClass = package._subpackage.MyClass
    package.MyClass = MyClass
    my_function = package._subpackage.my_function
    package.my_function = my_function
    __all__ = ["MyClass", "my_function"]
    __locals = vars(self)
    self.__locals = __locals
    for __name in __all__:
        package.__name = __name
        if not __name.startswith("__"):
            setattr(__locals[__name], "__module__", "package")
    self.__initialized__ = True
    self.__initializing__ = False
    return self
package.__init__ = _cribo_init___cribo_cca96f_package
def _cribo_init___cribo_66c36f_package__subpackage(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__package__ = 'package._subpackage'
    self.__doc__ = 'Subpackage that re-exports from modules using wildcards.'
    self.MyClass = package__subpackage_module_a.MyClass
    self.my_function = package__subpackage_module_b.my_function
    """Subpackage that re-exports from modules using wildcards."""
    self.module_b = package__subpackage_module_b
    self.module_a = package__subpackage_module_a
    self.__initialized__ = True
    self.__initializing__ = False
    return self
package__subpackage.__init__ = _cribo_init___cribo_66c36f_package__subpackage
"""Test wildcard imports with __all__ and setattr pattern."""
__cribo_init_result = _cribo_init___cribo_cca96f_package(package)
for attr in dir(__cribo_init_result):
    if not attr.startswith('_'):
        setattr(package, attr, getattr(__cribo_init_result, attr))
MyClass = package.MyClass
my_function = package.my_function
obj = MyClass()
print(f"MyClass instance value: {obj.value}")
print(f"my_function result: {my_function()}")
print("Success!")
